--- a/index.html
+++ b/index.html
@@ -148,6 +148,31 @@
         .nav { font-size: 35px; padding: 10px; opacity: 0.7; }
         h1 { font-size: 1.4rem; letter-spacing: 2px; }
     }
+
+/* Spinner ładowania */
+.loader {
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid var(--accent-color);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+    margin: 20px auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.error-msg {
+    color: #cc0000;
+    text-align: center;
+    padding: 20px;
+    font-weight: bold;
+}
+
+    
 </style>
 </head>
 <body>
@@ -395,5 +420,6 @@ window.openModal = (i) => {
 </script>
 </body>
 </html>
+
 
 
