--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <link rel="icon" type="image/png" href="./miecz1.png">
     <title>Moja Kolekcja Broni</title>
+    <meta name="robots" content="noindex, nofollow">
 <style>
     :root {
         --bg-color: #f5f5f0;
@@ -451,6 +452,7 @@ window.addEventListener('keydown', e => {
 </script>
 </body>
 </html>
+
 
 
 
